[package]
name = "npk"
version = "0.0.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
semver = "0.9.0"
lz4 = "1.23.1"
indicatif = "0.11.0"
toml = "0.4.10"
serde = "1.0.87"
serde_derive = "1.0.87"
num_cpus = "1.10.0"
sodiumoxide = "0.2.1"
users = "0.9.1"
bincode = "1.1.2"
