[package]
name = "rapidus-concept"
version = "0.1.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rapidus]
git = "https://github.com/maekawatoshiki/rapidus.git"
branch = "new-gen"
revision = "a808a98"
