[package]
name = "wasmtime"
version = "0.1.0"
authors = ["fox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "e87a489" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "e87a489" }
wasmtime-interface-types = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "e87a489" }
anyhow = "1.0.22"
wat = "1.0.4"
libc = "0.2.66"
